2007-03-07  Borut Razem <borut.razem AT siol.net>

	* device/lib/pic16/libdev/pic18f[24][34]31.c:
	  serch include files in the current directory

2007-03-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c (emitMaps, glue),
	* src/SDCCmem.c (initMem, allocDefault): added x_abs for initialized
	  absolute xdata
	* support/regression/tests/absolute.c: added xdata test

2007-03-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c (parseCmdLine): only set options.xstack_loc for mcs51,
	  added condition to macro, fixes bug 1666080

2007-03-02 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (genGenPointerSet): removed bogus assertion

2007-02-28 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/lib/mcs51/crtxclear.asm: pdata segment of 256 byte would not
	be cleared. Unconditionally set __XPAGE
	* src/hc08/gen.c: --no-gen-comments (RFE #1493816) for hc08

2007-02-27 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/SDCCglobl.h,
	* src/SDCCmain.c,
	* src/mcs51/gen.c,
	* src/mcs51/rtrack.c,
	* src/ds390/gen.c,
	* doc/sdccman.lyx: added --no-gen-comments
	* src/mcs51/peeph.def: added 192.b, disabled 185

2007-02-25 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genCast): fixed typo
	* device/lib/pic16/Makefile.subdir: only install existing files
	* device/lib/pic16/libdev/Makefile.in: build serially, avoid races

2007-02-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/mcs51/crtcall.asm: new, added for indirect calls
	* device/lib/mcs51/crtclear.asm,
	* device/lib/mcs51/crtxclear.asm: renumbered labels
	* device/lib/mcs51/Makefile.in: added crtcall.asm
	* doc/sdccman.lyx: documented mcs51 crt* library startup code
	* src/mcs51/gen.c (movc): removed,
	  (aopGet, genPlusBits): clear a after loading the carry (possibly from
	    acc.x or psw.x),
	  (toCarry, genSend, genRet): added function toCarry,
	  (genPcall): use "lcall @a+dptr" for functions w/o parameters,